--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "install-all": "cd server && npm install && cd ../frontend && npm install",
-    "dev": "npm run start-server & npm run start-web",
-    "start-server": "cd server && npm start",
-    "start-web": "cd frontend && npm run dev"
+    "install-all": "pnpm -r install",
+    "dev": "pnpm -C server start & pnpm -C frontend dev",
+    "start-server": "pnpm -C server start",
+    "start-web": "pnpm -C frontend dev"
   }
 }
